# ReachabilityInHypergraph

./: CMakeLists.txt  README.md
include/: Hypergraph.h  HypergraphTreeIndex.h  SimplexReader.bak  UWeightedPLL.h  WeightedGraph.h  bottleneckGraph.h  testBottleneck.h  timer.h
src/: CMakeLists.txt  bottleneckGraph.cpp  testBottleneck.cpp  timer.cpp
test/: CMakeLists.txt  bench_dynamic_DWR.cpp  bench_dynamic_HIndex.cpp  bench_static_query.cpp
